# open-union

./: .gitignore  README.markdown  open-union.cabal
.github/workflows/: haskell-ci.yml
src/Data/: Union.hs
test/: Main.hs  UnionSpecs.hs
